# Watchlist

./: .gitignore  CMakeLists.txt
h/core/: config.h  fmp.h  fmpstructs.h  markethourschecker.h
h/ui/: home.h  mainwindow.h  quotechartcard.h  sectorperfcard.h  stockcard.h
resources/styles/: main.qss
src/: main.cpp
src/core/: fmp.cpp
src/ui/: home.cpp  mainwindow.cpp  quotechartcard.cpp  sectorperfcard.cpp  stockcard.cpp
uif/: home.ui  mainwindow.ui  quotechartcard.ui  sectorperfcard.ui  stockcard.ui
